:sparkles: add movie filter release year
